--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <section login>
 
             <div logo>
-                <img src="logo.png" alt="APAMS" height="150px">
+                <img src="./img/logo.png" alt="APAMS" height="150px">
             </div>
 
             <div class="title">
