--- a/home.html
+++ b/home.html
@@ -42,53 +42,53 @@
 
         <div class="col-md card box alert-info">
           <i class="fas fa-dog"></i>
-          <div class="text-center">
+          <div class="text-box">
             <h3>Cães Cadastrados</h3>
-            <h1>15</h1>
+            <h1 class="float-right">15</h1>
           </div>
         </div>
 
         <div class="col-md card box alert-warning">
           <i class="fas fa-cat"></i>
-          <div class="text-center">
+          <div class="text-box">
             <h3>Gatos Cadastrados</h3>
-            <h1>23</h1>
+            <h1 class="float-right">23</h1>
           </div>
         </div>
 
 
         <div class="col-md card box alert-primary">
           <i class="fas fa-users"></i>
-          <div class="text-center">
+          <div class="text-box">
             <h3>Usuários Cadastrados</h3>
-            <h1>6</h1>
+            <h1 class="float-right">6</h1>
           </div>
         </div>
 
 
         <div class="col-md card box alert-success">
           <i class="fas fa-paw"></i>
-          <div class="text-center">
+          <div class="text-box">
             <h3>Animais Adotados</h3>
-            <h1>32</h1>
+            <h1 class="float-right">32</h1>
           </div>
         </div>
 
 
         <div class="col-md card box alert-secondary">
           <i class="fas fa-search"></i>
-          <div class="text-center">
+          <div class="text-box">
             <h3>Animais sem adoção</h3>
-            <h1>15</h1>
+            <h1 class="float-right">15</h1>
           </div>
         </div>
 
 
         <div class="col-md card box alert-danger">
           <i class="fas fa-bullhorn"></i>
-          <div class="text-center">
+          <div class="text-box">
             <h3>Patrocinadores</h3>
-            <h1>12</h1>
+            <h1 class="float-right">12</h1>
           </div>
         </div>
 
