--- a/config.html
+++ b/config.html
@@ -33,7 +33,6 @@
 
     <div class="title">
       <h1><i class="fas fa-cog"></i>Configurações</h1>
-      <hr>
       <h5 class="subtitle">Cadastramento de informações</h5>
     </div>
 
@@ -86,8 +85,11 @@
               </select>
             </div>
             <div class="form-group col-md-6">
-              <label for="avatar">Insira uma imagem</label>
-              <input type="file" class="form-control-file" id="avatar">
+              <input type="file" id="fileElem" multiple accept="image/*" onchange="handleFiles(this.files)">
+              <a href="#" id="fileSelect"><span class="badge badge-primary">Selecione a imagem</span></a>
+              <div id="fileList">
+                <p>Nenhum arquivo selecionado</p>
+              </div>
             </div>
             <div class="form-group col-md-12">
               <label for="description">Descrição</label>
@@ -96,10 +98,118 @@
             </div>
             <button type="submit" class="btn">Salvar</button>
           </form>
+          <hr>
+
+          <div>
+            <div class="title-list">
+              <div>
+                <h2>Animais</h2>
+              </div>
+              <div class="procurar-animais">
+                  <i class="fas fa-search"></i>
+                  <input type="text" class="form-control" id="procurarAnimais" placeholder="Pesquisar">
+              </div>
+            </div>
+            <table class="table text-center">
+              <thead>
+                <tr>
+                  <th scope="col">#ID</th>
+                  <th scope="col"></th>
+                  <th scope="col">Nome</th>
+                  <th scope="col">Porte</th>
+                  <th scope="col">Tipo</th>
+                  <th scope="col">Status</th>
+                  <th scope="col">Descrição</th>
+                  <th scope="col"></th>
+                  <th scope="col"></th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <th scope="row">1</th>
+                  <td>
+                    <div class="avatar-list">
+                      <img src="./img/avatar.png" alt="Avatar" height="50px;">
+                    </div>
+                  </td>
+                  <td>Thanos</td>
+                  <td>Médio</td>
+                  <td>Cachorro</td>
+                  <td>Aguardando</td>
+                  <td>Thanos foi abandonado...</td>
+                  <td><i class="fas fa-edit"></i></td>
+                  <td><i class="fas fa-trash-alt"></i></td>
+                </tr>
+                <tr>
+                  <th scope="row">1</th>
+                  <td>
+                    <div class="avatar-list">
+                      <img src="./img/avatar.png" alt="Avatar" height="50px;">
+                    </div>
+                  </td>
+                  <td>Thanos</td>
+                  <td>Médio</td>
+                  <td>Cachorro</td>
+                  <td>Aguardando</td>
+                  <td>Thanos foi abandonado...</td>
+                  <td><i class="fas fa-edit"></i></td>
+                  <td><i class="fas fa-trash-alt"></i></td>
+                </tr>
+                <tr>
+                  <th scope="row">1</th>
+                  <td>
+                    <div class="avatar-list">
+                      <img src="./img/avatar.png" alt="Avatar" height="50px;">
+                    </div>
+                  </td>
+                  <td>Thanos</td>
+                  <td>Médio</td>
+                  <td>Cachorro</td>
+                  <td>Aguardando</td>
+                  <td>Thanos foi abandonado...</td>
+                  <td><i class="fas fa-edit"></i></td>
+                  <td><i class="fas fa-trash-alt"></i></td>
+                </tr>
+                <tr>
+                  <th scope="row">1</th>
+                  <td>
+                    <div class="avatar-list">
+                      <img src="./img/avatar.png" alt="Avatar" height="50px;">
+                    </div>
+                  </td>
+                  <td>Thanos</td>
+                  <td>Médio</td>
+                  <td>Cachorro</td>
+                  <td>Aguardando</td>
+                  <td>Thanos foi abandonado...</td>
+                  <td><i class="fas fa-edit"></i></td>
+                  <td><i class="fas fa-trash-alt"></i></td>
+                </tr>
+                <tr>
+                  <th scope="row">1</th>
+                  <td>
+                    <div class="avatar-list">
+                      <img src="./img/avatar.png" alt="Avatar" height="50px;">
+                    </div>
+                  </td>
+                  <td>Thanos</td>
+                  <td>Médio</td>
+                  <td>Cachorro</td>
+                  <td>Aguardando</td>
+                  <td>Thanos foi abandonado...</td>
+                  <td><i class="fas fa-edit"></i></td>
+                  <td><i class="fas fa-trash-alt"></i></td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
         </div>
 
         <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">...</div>
       </div>
+
+
+
     </div>
 
   </div>
@@ -114,6 +224,8 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
     integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
     crossorigin="anonymous"></script>
+
+  <script src="js/index.js"></script>
 </body>
 
 </html>
