--- a/home.html
+++ b/home.html
@@ -13,20 +13,21 @@
 
 <body>
 
-  <div id="menu">
+  <div id="menu" class="left show">
     <div class="user">
       <img src="./img/logo.png" alt="APAMS" height="100px">
       <h5>Bem vindo, Gabriel</h5>
     </div>
-    <nav>
-      <ul>
-        <li class="action"><i class="fas fa-home"></i>Home</li>
-        <li><i class="fas fa-th-list"></i>Postagens</li>
-        <li><i class="fas fa-bell"></i>Notificações</li>
-        <li><i class="fas fa-cog"></i>Configurações</li>
-        <li><i class="fas fa-sign-out-alt"></i>Sair</li>
-      </ul>
-    </nav>
+    <ul>
+      <li><i class="fas fa-home"></i>Home</li>
+      <li><i class="fas fa-th-list"></i>Postagens</li>
+      <li><i class="fas fa-bell"></i>Notificações</li>
+      <li><i class="fas fa-cog"></i>Configurações</li>
+      <li><i class="fas fa-sign-out-alt"></i>Sair</li>
+    </ul>
+    <a href="#" id="showmenu">
+      <i class="fa fa-align-justify"></i>
+    </a>
   </div>
 
   <div id="conteudo">
@@ -97,15 +98,18 @@
   </div>
 
 
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-    crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
-    integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-    crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
-    integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
-    crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+  <script type="text/javascript" src="js/jquery.validate.min.js"></script>
+  <script type="text/javascript" src="js/localization/messages_pt_BR.js"></script>
+  <script type="text/javascript" src="js/jquery.mask.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
+  <script src="js/index.js"></script>
+  <script>
+    $("#showmenu").click(function (e) {
+      $("#menu").toggleClass("show");
+    });
+  </script>
 </body>
 
 </html>
